Fixed Build system for 1.7.10: TODO Requires a different setup of JVMDowngrader.